# sbol2_test

./: CMYK_versioning.xml  CMakeCache.txt  CMakeLists.txt  CRISPR.cpp  CRISPRRepressionExample.cpp  Host_example.xml  KianiCRISPR.cpp  LiuCRISPR.cpp  Makefile  R0010.xml  R0010out.xml  Source.c  Source.cpp  a.out  cmake_install.cmake  combinatorial.xml  copy_example.xml  escape_code_example.xml  escape_code_example_2.xml  gtl_example.xml  igem_component_def.xml  igem_example.xml  igem_example_out.xml  interactions_example.xml  log  module_example.xml  module_example_out.xml  sbol_test  search_query_example.xml  test  test-sbol.xml  test_SBOL_compliance.cpp  test_callbacks.cpp  test_combinatorial.cpp  test_comparison.cpp  test_datetime.cpp  test_extension.cpp  test_issue.cpp  test_modules_example.cpp  test_ntriples_conversion.cpp  (+11 more)
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
Debug/: new_AnnotationOutput.rdf  new_BBa_I0462.rdf  new_BBa_I0462_orig.rdf  new_CollectionOutput.rdf  new_ComponentDefinitionOutput.rdf  new_CreateAndRemoveCollections.rdf  new_CreateAndRemoveComponentDefinition.rdf  new_CreateAndRemoveGenericTopLevel.rdf  new_CreateAndRemoveModel.rdf  new_CreateAndRemoveModuleDefinition.rdf  new_CutExample.rdf  new_GenericTopLevelOutput.rdf  new_ModelOutput.rdf  new_ModuleDefinitionOutput.rdf  new_RepressionModel.rdf  new_SequenceConstraintOutput.rdf  new_SequenceOutput.rdf  new_SimpleComponentDefinitionExample.rdf  new_SimpleModuleDefinition.rdf  new_igem1.rdf  new_igem2.rdf  new_igem3.rdf  (+62 more)
(+17 files in other folders)
